--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="banner-content">
         <h3 class="banner-title">Brand New 
           Group of Architects</h3>
-        <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <button class="btn-primary">Explore More</button>
       </div>
       <div>
@@ -47,8 +47,8 @@
         <img src="images/team4.png" alt="">
       </div>
       <div class="teams-content">
-        <h3 class="teams-title"><span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="features">Features</span></h3>
-        <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <h3 class="teams-title"><span class="quick-list text-light-gray">Quick list</span> <span class="of-our">of Our</span> <span class="features">Features</span></h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <button class="btn-primary">Explore More</button>
       </div>
     </section>
