--- a/index.html
+++ b/index.html
@@ -52,15 +52,85 @@
         <button class="btn-primary">Explore More</button>
       </div>
     </section>
+    <!-- features section -->
+    <section class="features">
+      <div class="feature-content">
+        <h3 class="section-title">Features you will <br> love & enjoy</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+        <div class="card">
+          <h4 class="card-title">Desktop & Mobile Version</h4>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+        </div>
+        <div class="card">
+          <h4 class="card-title">Drag & Drop Builder</h4>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+        </div>
+        <div class="card">
+          <h4 class="card-title">Awesome Modern Design</h4>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+        </div>
+        <div class="card">
+          <h4 class="card-title">Super Easy to Edit</h4>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+        </div>
+      </div>
+      <div class="feature-img">
+        <img src="images/architect.png" alt="">
+        <div class="ten-years-badge">
+          <h2>10+ years</h2>
+          <p>Experience</p>
+        </div>
+      </div>
+    </section>
+    <!-- facts section -->
+    <section class="facts">
+      <h3 class="section-title">Some Facts</h3>
+      <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
 
+      <div class="facts-card-container">
+        <!-- .card*4>img+h2.card-stats+p.card-title.text-light-gray  -->
+        <div class="card">
+          <img src="images/icons/ribon.png" alt="">
+          <h2 class="card-stats">54</h2>
+          <p class="card-title text-light-gray">Awards Winnings</p>
+        </div>
+        <div class="card">
+          <img src="images/icons/projects.png" alt="">
+          <h2 class="card-stats">1458</h2>
+          <p class="card-title text-light-gray">Project Finished</p>
+        </div>
+        <div class="card">
+          <img src="images/icons/customers.png" alt="">
+          <h2 class="card-stats">590</h2>
+          <p class="card-title text-light-gray">Clients Worked</p>
+        </div>
+        <div class="card">
+          <img src="images/icons/email.png" alt="">
+          <h2 class="card-stats">22578</h2>
+          <p class="card-title text-light-gray">Email Send</p>
+        </div> 
+      </div>
+    </section>
 
+    <!-- Sponsor Section -->
+    <section class="sponsors">
+      <h3 class="section-title">Our Sponsors</h3>
+      <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      <div class="sponsors-img-container">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/google.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
+      </div>
+    </section>
   </main>
   <!-- main section end -->
 
 
   <!-- footer section start -->
   <footer>
-
+    <p class="text-light-gray">All rights reserved copyright&copy;2023 startup landing page design</p>
   </footer>
   <!-- footer section end -->
   
